--- a/Style.html
+++ b/Style.html
@@ -29,7 +29,7 @@
 
     <div class="card">
         <img src="Kashmir.jpg" alt="City view">
-        <h2>Paris</h2>
+        <h2>Kashmir</h2>
         <p> A beautiful mountains and snowfally and famous places and good cricket 
         </div>
 
