Fix typo in description of Kashmir

--- a/Style.html
+++ b/Style.html
@@ -30,7 +30,7 @@
     <div class="card">
         <img src="Kashmir.jpg" alt="City view">
         <h2>Kashmir</h2>
-        <p> A beautiful mountains and snowfally and famous places and good cricket 
+        <p> A beautiful mountains and snowfally and famous places and good cricket bats 
         </div>
 
     </div>
